--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,5 @@
   "singleQuote": true,
   "semi": true,
   "trailingComma": "all",
-  "arrowParens": "always",
-  "space-infix-ops": 0
+  "arrowParens": "always"
 }
